refactor packages, added javadoc